dataflow diagram tray widget

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,15 +16,15 @@
     "module": "commonjs",
     "noEmitOnError": false,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "resolveJsonModule": true,
     "strict": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
+    "strictNullChecks": false,
+    "strictPropertyInitialization": false,
     "stripInternal": true,
     "target": "es5",
     "allowJs": true,
