--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/d3": "^7",
     "@types/indefinite": "*",
     "@types/jest": "*",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^14",
     "@types/react": "*",
     "@types/react-dom": "*",
@@ -63,6 +64,7 @@
     "d3": "^7",
     "eslint-plugin-header": "^3.1.1",
     "indefinite": "*",
+    "lodash": "^4.17.21",
     "react": "*",
     "react-dom": "*",
     "react-markdown": "*",
