--- a/package.json
+++ b/package.json
@@ -67,10 +67,13 @@
     "lodash": "^4.17.21",
     "react": "*",
     "react-dom": "*",
+    "react-draggable": "^4.4.6",
     "react-markdown": "*",
+    "react-resize-observer": "^1.1.1",
     "react-router-dom": "*",
     "react-scripts": "5.0.1",
     "react-simply-carousel": "*",
+    "react-work-flow": "^1.1.1",
     "rehype-raw": "*",
     "rehype-stringify": "*",
     "remark-frontmatter": "*",
@@ -79,6 +82,7 @@
     "remark-rehype": "*",
     "resize-observer-polyfill": "^1.5.1",
     "sanitize-html": "*",
+    "styled-components": "^6.0.8",
     "unified": "*",
     "use-local-storage-state": "*",
     "uuid": "*",
