--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
     "noUnusedParameters": true,
     "resolveJsonModule": true,
     "strict": true,
-    "strictNullChecks": false,
-    "strictPropertyInitialization": false,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
     "stripInternal": true,
     "target": "es5",
     "allowJs": true,
