--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,7 +27,7 @@ jobs:
           fetch-depth: 0
           ref: main
       - name: Build
-        run: npm install && npm run build
+        run: yarn install && yarn build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
