--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -193,7 +193,7 @@
       "config/header.js"
     ],
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
-    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+    "react-hooks/exhaustive-deps": "error" // Checks effect dependencies
   },
   "overrides": [
     {
