--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@aws-northstar/ui": "*",
     "@cloudscape-design/board-components": "*",
+    "@cloudscape-design/collection-hooks": "^1.0.23",
     "@cloudscape-design/components": "*",
     "@cloudscape-design/design-tokens": "*",
     "@cloudscape-design/global-styles": "*",
