--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,11 @@
 	"features": {
 		"ghcr.io/lukewiwa/features/shellcheck:0": {
 			"version": "stable"
+		},
+		"ghcr.io/devcontainers/features/terraform:1": {
+			"version": "latest",
+			"tflint": "latest",
+			"terragrunt": "latest"
 		}
 	},
 	"containerEnv": {
