--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,20 +5,8 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   build-and-deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,14 +14,18 @@ jobs:
         with:
           fetch-depth: 0
           ref: main
+
       - name: Build
         run: yarn install && yarn build
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+
+      - name: Configure aws credentials using OIDC
+        uses: aws-actions/configure-aws-credentials@010d0da01d0b5a38af31e9c3470dbfdabdecca3a # v4.0.1
         with:
-          path: "./build"
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+          role-to-assume: arn:aws:iam::283582579564:role/threat-modeling-tool-apply
+          role-session-name: TFApply
+          aws-region: ca-central-1
+
+      - name: Deploy and invalidate cache
+        run: |
+          aws s3 sync ~/build s3://threat-modeling.cdssandbox.xyz-f3pn8icp/ --delete
+          aws cloudfront create-invalidation --cli-input-json "{\"DistributionId\":\"E3989RAVFXNM48\",\"InvalidationBatch\":{\"Paths\":{\"Quantity\":1,\"Items\":[\"/*\"]},\"CallerReference\":\"$(date +%s)\"}}"
