--- a/package.json
+++ b/package.json
@@ -11,36 +11,34 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
     "@cloudscape-design/jest-preset": "*",
-    "@projectstorm/react-canvas-core": "^7.0.1",
-    "@projectstorm/react-diagrams": "^7.0.2",
     "@testing-library/jest-dom": "*",
     "@testing-library/react": "*",
-    "@testing-library/user-event": "*",
+    "@testing-library/user-event": "^14.5.2",
     "@types/d3": "^7",
     "@types/indefinite": "*",
-    "@types/jest": "*",
+    "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.199",
     "@types/node": "^14",
     "@types/react": "*",
     "@types/react-dom": "*",
     "@types/react-router-dom": "*",
     "@types/sanitize-html": "*",
-    "@types/uuid": "*",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "eslint": "^8",
     "eslint-import-resolver-node": "*",
     "eslint-import-resolver-typescript": "*",
-    "eslint-plugin-import": "*",
+    "eslint-plugin-import": "^2.29.1",
     "jest": "*",
     "jest-junit": "^13",
     "merge": "*",
-    "npm-check-updates": "^16",
+    "npm-check-updates": "^16.14.15",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "ts-jest": "*",
+    "ts-jest": "^29.1.2",
     "typescript": "^4.0.3",
     "zod": "*"
   },
@@ -52,15 +50,15 @@
   },
   "dependencies": {
     "@aws-northstar/ui": "*",
-    "@cloudscape-design/board-components": "*",
-    "@cloudscape-design/collection-hooks": "^1.0.23",
-    "@cloudscape-design/components": "*",
-    "@cloudscape-design/design-tokens": "*",
-    "@cloudscape-design/global-styles": "*",
-    "@emotion/react": "*",
+    "@cloudscape-design/board-components": "^3.0.54",
+    "@cloudscape-design/collection-hooks": "^1.0.38",
+    "@cloudscape-design/components": "^3.0.566",
+    "@cloudscape-design/design-tokens": "^3.0.34",
+    "@cloudscape-design/global-styles": "^1.0.24",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@projectstorm/react-canvas-core": "^7.0.1",
-    "@projectstorm/react-diagrams": "^7.0.2",
+    "@projectstorm/react-canvas-core": "^7.0.3",
+    "@projectstorm/react-diagrams": "^7.0.4",
     "browser-image-compression": "*",
     "d3": "^7",
     "eslint-plugin-header": "^3.1.1",
@@ -84,11 +82,11 @@
     "remark-rehype": "*",
     "resize-observer-polyfill": "^1.5.1",
     "sanitize-html": "*",
-    "styled-components": "^6.0.8",
+    "styled-components": "^6.1.8",
     "unified": "*",
     "use-local-storage-state": "*",
     "uuid": "*",
-    "web-vitals": "*",
+    "web-vitals": "^3.5.2",
     "zod": "^3.22.3"
   },
   "license": "Apache-2.0",
