--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.199",
     "@types/node": "^14",
-    "@types/react": "*",
-    "@types/react-dom": "*",
+    "@types/react": "18.2.38",
+    "@types/react-dom": "^18.2.22",
     "@types/react-router-dom": "*",
     "@types/sanitize-html": "*",
     "@types/uuid": "^9.0.8",
