--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -189,8 +189,7 @@
       "error"
     ],
     "header/header": [
-      2,
-      "config/header.js"
+      "off"
     ],
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
     "react-hooks/exhaustive-deps": "error" // Checks effect dependencies
