--- a/package.json
+++ b/package.json
@@ -60,10 +60,9 @@
     "@emotion/styled": "^11.11.0",
     "@projectstorm/react-canvas-core": "^7.0.3",
     "@projectstorm/react-diagrams": "^7.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
     "browser-image-compression": "*",
     "d3": "^7",
-    "d3-drag": "^3.0.0",
-    "d3-selection": "^3.0.0",
     "eslint-plugin-header": "^3.1.1",
     "indefinite": "*",
     "lodash": "^4.17.21",
