--- a/Dockerfile.lambda
+++ b/Dockerfile.lambda
@@ -3,13 +3,14 @@ FROM node:18@sha256:a17842484dd30af97540e5416c9a62943c709583977ba41481d601ecffb7
 ENV NODE_ENV=production
 ENV NEXT_OUTPUT_STANDALONE=true
 
-COPY . /src
-WORKDIR /src
-
 ADD https://github.com/cds-snc/static-content-lambda/raw/main/release/latest/lambda-static-server /lambda-static-server
 RUN chmod 755 /lambda-static-server
 
+COPY . /src
+WORKDIR /src
+
 RUN corepack enable && yarn set version berry
+RUN yarn install
 RUN yarn build
 
 FROM scratch
