--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
-    "@cloudscape-design/jest-preset": "*",
+    "@cloudscape-design/jest-preset": "^2.0.28",
     "@testing-library/jest-dom": "*",
     "@testing-library/react": "*",
     "@testing-library/user-event": "^14.5.2",
@@ -91,6 +91,15 @@
     "uuid": "*",
     "web-vitals": "^3.5.2",
     "zod": "^3.22.3"
+  },
+  "jest": {
+    "transform": {
+      "node_modules/@cloudscape-design/.+\\.js$": "./node_modules/@cloudscape-design/jest-preset/js-transformer.js",
+      "node_modules/@cloudscape-design/.+\\.css": "./node_modules/@cloudscape-design/jest-preset/css-transformer.js"
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(use-local-*|d3-.*|internmap|@cloudscape-design/)).+\\.js$"
+    ]
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
